# gakreview

./: .gitignore  README.md  db.sqlite3  pyproject.toml
api/menu/: models.py  serializers.py  urls.py  views.py
api/menus/: models.py  serializers.py  urls.py  views.py
api/restaurant/: models.py  serializers.py  urls.py  views.py
api/restaurants/: models.py  serializers.py  urls.py  views.py
api/review/: models.py  serializers.py  urls.py  views.py
api/reviews/: models.py  serializers.py  urls.py  views.py
base/: settings.py  urls.py
gakreview-frontend/: package.json
gakreview-frontend/.next/: trace
gakreview-frontend/app/: page.tsx
gakreview-frontend/utils/: api.ts
utils/: menuCrawler.py
